images added to essay questions and answers, and multiple choice questions

--- a/app/src/main/res/layout/fragment_essay_answer.xml
+++ b/app/src/main/res/layout/fragment_essay_answer.xml
@@ -5,21 +5,36 @@
     android:background="@drawable/question_background"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/essayQuestionNumberAnswerLabel"
-        style="@style/titleText"
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:gravity="center_vertical|center_horizontal" />
-
-    <TextView
-        android:id="@+id/essayQuestionAnswerLabel"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="10dp"
-        android:text="It seems that there are only five"
-        android:textSize="18sp" />
+        android:padding="10dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/essayQuestionAnswerLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="vertical"
+                android:text="It seems that there are only five"
+                android:textSize="18sp" />
+
+            <ImageView
+                android:id="@+id/EssayAnswerImageView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:scaleType="fitCenter"
+                android:visibility="gone"
+                app:srcCompat="@drawable/ic_assignment_black_24dp" />
+
+        </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -51,7 +66,7 @@
                 android:layout_weight="1"
                 android:text="read aloud"
                 android:textAlignment="center"
-                android:textColor="@color/colorLightGrey" />
+                android:textColor="@android:color/darker_gray" />
         </LinearLayout>
 
         <LinearLayout
