--- a/app/src/main/res/layout/fragment_question_container.xml
+++ b/app/src/main/res/layout/fragment_question_container.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/questionContainer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context="com.tecknoloick.studybuddy.QuestionContainerFragment">
 
 </FrameLayout>
