--- a/app/src/main/res/layout/row_multiple_choice_question.xml
+++ b/app/src/main/res/layout/row_multiple_choice_question.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white"
@@ -11,9 +12,8 @@
     <TextView
         android:id="@+id/multipleChoiceQuestionRowNumberLabel"
         style="@style/genericText"
-        android:layout_width="wrap_content"
+        android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_weight="1"
         android:background="@drawable/multple_choice_letter_background"
         android:gravity="center"
         android:text="A"
@@ -28,4 +28,13 @@
         android:layout_weight="10"
         android:text="Option here"
         android:textColor="@android:color/black" />
+
+    <ImageView
+        android:id="@+id/multipleChoiceQuestionRowImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:scaleType="fitCenter"
+        android:visibility="gone"
+        app:srcCompat="@drawable/ic_assignment_black_24dp" />
 </LinearLayout>
