--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/colorBgGray"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
@@ -12,26 +12,33 @@
         style="@style/genericToolBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorBgGray"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme">
+        android:theme="?attr/actionBarTheme"
+        app:navigationIcon="@drawable/ic_curved_up_black">
 
-        <TextView
-            android:id="@+id/courseTitleLabel"
-            style="@style/titleText"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Select your course"
-            android:textAlignment="center"
-            android:textSize="18sp" />
-    </android.support.v7.widget.Toolbar>
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/courseLabel"
-        style="@style/titleText"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:gravity="center"
-        android:text="What course are you studying?" />
+            <TextView
+                android:id="@+id/courseTitleLabel"
+                style="@style/titleText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Select your course" />
+
+            <Button
+                android:id="@+id/changeInstitutionButton"
+                style="@style/changeGradeButton"
+                android:onClick="onClick"
+                android:text="Change Institution" />
+        </LinearLayout>
+
+    </android.support.v7.widget.Toolbar>
 
     <!-- TODO: change to recyclerview -->
     <ListView
