--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorDeepPurple"
+    android:background="@color/colorBgGray"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
@@ -15,12 +15,11 @@
 
         <TextView
             android:id="@+id/questionTitleLabel"
-            style="@style/altTitleText"
+            style="@style/titleText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="title"
-            android:textAlignment="center"
-            android:textSize="18sp" />
+            android:textAlignment="center" />
     </android.support.v7.widget.Toolbar>
 
     <com.tecknologick.studybuddy.Adapters.QuestionViewPager
