--- a/app/src/main/res/layout/fragment_essay_answer.xml
+++ b/app/src/main/res/layout/fragment_essay_answer.xml
@@ -66,7 +66,7 @@
                 android:layout_weight="1"
                 android:text="read aloud"
                 android:textAlignment="center"
-                android:textColor="@android:color/darker_gray" />
+                android:textColor="@color/colorPrimary" />
         </LinearLayout>
 
         <LinearLayout
