--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorItemTint">#4a4a4a</color>
     <color name="colorLightGrey">#F0F0F0</color>
-    <color name="colorDeepPurple">#100C53</color>
+    <color name="colorDeepPurple">#ECF1F3</color>
+    <color name="colorBgGray">#ECF1F3</color>
     <color name="colorStudyBlue">#4990E2</color>
 </resources>
