--- a/app/src/main/res/layout/fragment_essay_answer.xml
+++ b/app/src/main/res/layout/fragment_essay_answer.xml
@@ -1,9 +1,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/essayAnswerContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/question_background"
     android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/expandedEssayAnswerImage"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -24,14 +31,13 @@
                 android:text="It seems that there are only five"
                 android:textSize="18sp" />
 
-            <ImageView
+            <ImageButton
                 android:id="@+id/EssayAnswerImageView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:scaleType="fitCenter"
-                android:visibility="gone"
-                app:srcCompat="@drawable/ic_assignment_black_24dp" />
+                android:visibility="gone" />
 
         </LinearLayout>
     </ScrollView>
@@ -51,8 +57,8 @@
 
             <ImageButton
                 android:id="@+id/readAloudAnswerImageButton"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_gravity="left"
                 android:background="@android:color/transparent"
                 android:scaleType="centerCrop"
@@ -78,8 +84,8 @@
 
             <ImageButton
                 android:id="@+id/seeQuestionImageButton"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_gravity="right"
                 android:background="@android:color/transparent"
                 android:scaleType="centerCrop"
