--- a/app/src/main/res/layout/fragment_multiple_choice_question.xml
+++ b/app/src/main/res/layout/fragment_multiple_choice_question.xml
@@ -10,7 +10,7 @@
         android:id="@+id/questionNumberLabel"
         style="@style/titleText"
         android:layout_width="match_parent"
-        android:layout_height="65dp"
+        android:layout_height="40dp"
         android:background="@drawable/question_title_background"
         android:gravity="center_vertical|center_horizontal"
         android:text="Question 1 of 5" />
@@ -42,7 +42,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:text="How many questions are there in this exam paper?"
+                android:text="text before image"
                 android:textSize="18sp" />
 
             <ImageView
@@ -51,8 +51,17 @@
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:scaleType="fitCenter"
-                android:visibility="gone"
-                app:srcCompat="@drawable/ic_assignment_black_24dp" />
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/questionBottomLabel"
+                style="@style/genericText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="text after image"
+                android:textSize="18sp"
+                android:visibility="gone" />
 
             <com.tecknologick.studybuddy.Adapters.ExpandableHeightListView
                 android:id="@+id/multipleChoiceQuestionsListView"
