--- a/app/src/main/res/layout/fragment_essay_question.xml
+++ b/app/src/main/res/layout/fragment_essay_question.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/question_background"
     android:orientation="vertical">
 
-    <ImageView
+    <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/expandedEssayQuestionImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -24,8 +24,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:padding="10dp">
+        android:layout_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
