--- a/app/src/main/res/layout/row_multiple_choice_question.xml
+++ b/app/src/main/res/layout/row_multiple_choice_question.xml
@@ -26,6 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_weight="10"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp"
         android:text="Option here"
         android:textColor="@android:color/black"
         android:textSize="18sp" />
