--- a/app/src/main/res/layout/activity_module.xml
+++ b/app/src/main/res/layout/activity_module.xml
@@ -5,8 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.tecknoloick.studybuddy.ModuleActivity">
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/moduleToolBar"
@@ -15,8 +14,7 @@
         android:layout_height="wrap_content"
         android:background="@color/colorBgGray"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:navigationIcon="@drawable/ic_curved_up_black">
+        android:theme="?attr/actionBarTheme">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,7 +27,8 @@
                 style="@style/titleText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:textAlignment="center" />
 
             <Button
                 android:id="@+id/changeGradeButton"
