--- a/app/src/main/res/layout/fragment_multiple_choice_answer.xml
+++ b/app/src/main/res/layout/fragment_multiple_choice_answer.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/multipleChoiceAnswerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,7 +28,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            tools:ignore="ScrollViewSize">
 
             <TextView
                 android:id="@+id/questionAnswerLabel"
@@ -38,7 +40,32 @@
                 android:paddingBottom="20dp"
                 android:paddingTop="10dp"
                 android:text="TextView"
-                android:textSize="18dp" />
+                android:textSize="18dp"
+                android:visibility="gone"
+                tools:ignore="SpUsage" />
+
+            <ImageButton
+                android:id="@+id/questionAnswerImageButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:scaleType="fitCenter"
+                android:visibility="gone"
+                android:contentDescription=""
+                tools:ignore="ContentDescription" />
+
+            <TextView
+                android:id="@+id/questionAnswerBelowLabel"
+                style="@style/genericText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingBottom="20dp"
+                android:paddingTop="10dp"
+                android:text="TextView"
+                android:textSize="18dp"
+                android:visibility="gone"
+                tools:ignore="SpUsage" />
 
             <TextView
                 android:id="@+id/selectedAnswerLabel"
@@ -48,7 +75,8 @@
                 android:layout_weight="1"
                 android:paddingBottom="20dp"
                 android:paddingTop="20dp"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/answerAnswerLabel"
@@ -58,7 +86,8 @@
                 android:layout_weight="1"
                 android:paddingBottom="20dp"
                 android:paddingTop="20dp"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textSize="18sp" />
 
             <ImageButton
                 android:id="@+id/multipleChoiceAnswerImageButton"
@@ -66,7 +95,9 @@
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:scaleType="fitCenter"
-                android:visibility="gone" />
+                android:visibility="gone"
+                android:contentDescription=""
+                tools:ignore="ContentDescription" />
 
             <TextView
                 android:id="@+id/explanationAnswerLabel"
@@ -76,7 +107,9 @@
                 android:layout_weight="1"
                 android:paddingBottom="20dp"
                 android:paddingTop="20dp"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textSize="18sp"
+                android:visibility="gone" />
 
         </LinearLayout>
     </ScrollView>
